    Die Daten werden im ebenfalls neuen Objekt "AudioInfo" abgelegt.
    Die Funktion soll IdentMPEG ablösen und neben MP3 auch andere Formate
    unterstützen. Gegenwärtig wird MP3 und AIFF unterstützt.
  - CFile::RenameFile löscht unter Windows die Zieldatei vor dem Rename.
    Die C-Funktion "rename" bzw. "_wrename" verhält sich unter Windows
    anders als unter Unix.
  
Version 6.4.18 vom 04.02.2014	(SVN-Tag: REL_6_4_18)
  - CID3Tag: Neue Funktion zum Auslesen von PRIV-Frames (PrivateData)
  - CID3Tag unterstützt TXXX-Tag mit EnergyLevel
  - CID3Tag liefert Anzahl Frames zurück mit CID3Tag::FrameCount()
  - Webserver: Funktionen queueResponse und queueBasicAuthFailedResponse haben
    keinen Rückgabewert mehr und werfen eine Exception im Fehlerfall
  - Webserver: Fehlerbehandlung in answer_to_connection implementiert
  - CConfig: Spaces am Anfang und Ende von Werten werden nicht mehr abge-
    schnitten
  - Bugfix: Die LTrim-Funktionen der beiden String-Klassen CString und
    CWString haben beim Verschieben des Strings ein Byte über das Ende des
    internen Buffers hinausgelesen.
  - CTCPSocket::Read: Fehlercode EINTR wird wie EAGAIN behandelt und
    ignoriert, bzw. ein Retry initiiert
  - Funktion IdentMPEG kann besser mit fehlerhaften MP3-dateien umgehen
  - CFile::CopyFile funktioniert nun. Bisher wurde das neue File nicht
    angelegt und das alte gelöscht :-(  => Unittests angelegt
  - Statische Funktionen von CFile refakturiert: statt "const char*"
    wird nun "const CString &" erwartet, ausser dort, wo ein Formatstring
    übergeben wird. Funktionen mit Formatstring haben ein "f" am Ende des
    Funktionsnamens erhalten
  - File-Funktionen unter Windows: Es werden jetzt Non-US-ASCII-Zeichen
    im Dateinamen unterstützt.
  - CFile::Truncate wird nun auch unter Windows unterstützt
  - Bugfix: Absturz unter Windows durch unbehandelte Exception im Destruktor
    der CLog-Klasse behoben. Seit Version 6.4.15 wird Syslog unter Unix