@@ -32,6 +32,10 @@ Version 6.4.19
   - CFile::RenameFile löscht unter Windows die Zieldatei vor dem Rename.
     Die C-Funktion "rename" bzw. "_wrename" verhält sich unter Windows
     anders als unter Unix.
+  - CFile::Exists verwendet nun "stat" bzw. unter Windows "_wstat" um
+    ein konsistentes Verhalten zu bekommen. Bisher wurde versucht die
+    Datei zu öffnen, was unter Unix auch auf Verzeichnisse funktioniert,
+    unter Windows aber nicht.
   
 Version 6.4.18 vom 04.02.2014	(SVN-Tag: REL_6_4_18)
   - CID3Tag: Neue Funktion zum Auslesen von PRIV-Frames (PrivateData)
